aws/projects/101-kittens-carousel-static-website-ec2/cf-template-TED.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  CloudFormation Template for Kittens Carousel Static Website on EC2.
  This template deploys Kittens Carousel Static Website on Amazon Linux 2
  (ami-09d95fab7fff3776c) EC2 Instance with custom security group 
  allowing http connections on port 80. Kittens Carousel Static Website 
  is downloaded from Github repository, then deployed on Apache Web Server.

Resources:
  TEDSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP + SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  TEDInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: E2031-Salih_Virginia
      SecurityGroupIds:
        - !Ref TEDSecurityGroup
      Tags:                
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack   
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html/
            wget https://raw.githubusercontent.com/E2080-Selim/cw_AWS_Dev_Ops_Workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg

            wget https://raw.githubusercontent.com/E2080-Selim/cw_AWS_Dev_Ops_Workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg

            wget https://raw.githubusercontent.com/E2080-Selim/cw_AWS_Dev_Ops_Workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg

            wget https://raw.githubusercontent.com/E2080-Selim/cw_AWS_Dev_Ops_Workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
            systemctl start httpd
            systemctl enable httpd
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt TEDInstance.PublicDnsName
    Description: Kittens Carousel Application URL
